# advent-of-code

./: pyproject.toml
src/advent_of_code/: __init__.py
src/advent_of_code/day_01/: part1.py  part2.py
