[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
    {name = "Marie Roald", email = "roald.marie@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 120